src/app/hebrew-navigation.css
/* Global Hebrew Navigation Styles — production CSS from triolla.io home page */

/* Header styles for Hebrew navigation */
.header {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  padding: 27px 0px 18px 0px;
  z-index: 9;
  transition: 0.3s;
  -moz-transition: 0.3s;
  -webkit-transition: 0.3s;
  border-bottom: 1px solid #FFBF00;
  width: 100%;
}

.headnewact.header {
  top: 87px;
}

.sticky .headnewact.header {
  top: 40px;
}

.sticky .header {
  background: #FED125;
  top: 40px;
}

.header_wrap {
  max-width: 100%;
  margin: 0px auto;
  padding: 0px 48px;
}

.logo {
  position: relative;
  padding-right: 18px;
  padding-left: 0;
}

.logo a {
  display: block;
}

.logo a span {
  font-weight: 400;
  font-size: 14px;
  line-height: 25px;
  letter-spacing: normal;
  color: #000;
}

.logo img.one {
  display: none;
}

.logo img.two {
  display: block;
}

.header_menu {
  float: right;
  width: calc(100% - 705px);
  text-align: center;
  padding: 22px 0px 0px 0px;
}

.header_menu ul.menu {
  padding: 0px;
}

.header_menu ul.menu li {
  display: inline-block;
  padding: 0px 10px;
  vertical-align: top;
}

.header_menu ul.menu li a {
  display: block;
  padding: 0px 14px;
  font-weight: 400;
  font-size: 22px;
  line-height: 25px;
  letter-spacing: 0;
  color: #000;
}

.header_right {
  float: left;
  padding: 7px 0px 0px 0px;
}

.header_contact {
  text-align: center;
  float: left;
}

.header_contact a {
  display: block;
  border: 1px solid #000000;
  text-align: center;
  border-radius: 50px;
  -mborder-radius: 50px;
  -webkit-border-radius: 50px;
  font-family: 'Almoni ML v5 AAA';
  font-weight: normal;
  font-size: 16px;
  line-height: 48px;
  letter-spacing: normal;
  color: #000;
  padding: 0px 15px;
  position: relative;
  transition: 0.3s;
  -moz-transition: 0.3s;
  -webkit-transition: 0.3s;
  overflow: hidden;
}

.header_contact a:hover {
  color: #FFF;
}

.header_contact a > span {
  align-items: center;
  border-radius: 50px;
  -moz-border-radius: 50px;
  -webkit-border-radius: 50px;
  color: #000;
  display: flex;
  text-align: center;
  font-weight: 500;
  font-size: 16px;
  line-height: 48px;
  letter-spacing: normal;
  justify-content: center;
  position: relative;
  transition: transform .3s ease, opacity .3s ease;
  width: 100%;
}

.header_contact a > span.default-text {
  color: #000;
}

.header_contact a > span.hover-text {
  bottom: 0;
  color: #FFF;
  left: 0;
  opacity: 0;
  position: absolute;
  right: 0;
  top: 0;
  visibility: hidden;
}

.header_contact a > span.button-overlay {
  background: #000;
  border-radius: 50px;
  -moz-border-radius: 50px;
  -webkit-border-radius: 50px;
  bottom: 0;
  color: #FFF;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  transform: scaleX(0);
  transform-origin: right;
}

.header_contact a:hover .hover-text {
  opacity: 1;
  visibility: visible;
  z-index: 1;
}

.header_contact a:hover .button-overlay {
  transform: scaleX(1);
  transform-origin: left;
}

/* Desktop: hide hamburger menu */
.menutoggle {
  display: none !important;
  visibility: hidden !important;
}

.header_whatsapp {
  float: left;
  margin-left: 12px;
  position: relative;
  top: 2.5px;
}

.header_whatsapp a {
  display: block;
}

.header_book {
  float: left;
}

.header_book a {
  display: block;
  border: 1px solid #000000;
  background: #006BFF;
  text-align: center;
  border-radius: 50px;
  -mborder-radius: 50px;
  -webkit-border-radius: 50px;
  font-family: 'Almoni ML v5 AAA';
  font-weight: normal;
  font-size: 16px;
  line-height: 48px;
  letter-spacing: normal;
  color: #FFF;
  padding: 0px 23px;
  position: relative;
  transition: 0.3s;
  -moz-transition: 0.3s;
  -webkit-transition: 0.3s;
  overflow: hidden;
}

.header_book a svg {
  display: inline-block;
  vertical-align: middle;
  margin-left: 10px;
  margin-top: 0px;
}

.header_book a svg * {
  fill: #FFF;
  transition: 0.3s;
  -moz-transition: 0.3s;
  -webkit-transition: 0.3s;
}

.header_book a:hover * {
  fill: #FFF;
}

.header_book a > span {
  align-items: center;
  border-radius: 50px;
  -moz-border-radius: 50px;
  -webkit-border-radius: 50px;
  color: #000;
  display: flex;
  text-align: center;
  font-weight: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 48px;
  letter-spacing: normal;
  justify-content: center;
  position: relative;
  transition: transform .3s ease, opacity .3s ease;
  width: 100%;
}

.header_book a > span.default-text {
  color: #FFF;
}

.header_book a > span.hover-text {
  color: #FFF;
}

.header_book a > span.default-text {
  color: #FFF;
}

.header_book a > span.hover-text {
  bottom: 0;
  color: #FFF;
  left: 0;
  opacity: 0;
  position: absolute;
  right: 0;
  top: 0;
  visibility: hidden;
}

.header_book a > span.button-overlay {
  background: #000;
  border-radius: 50px;
  -moz-border-radius: 50px;
  -webkit-border-radius: 50px;
  bottom: 0;
  color: #FFF;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  transform: scaleX(0);
  transform-origin: right;
}

.header_book a:hover .hover-text {
  opacity: 1;
  visibility: visible;
  z-index: 1;
}

.header_book a:hover .button-overlay {
  transform: scaleX(1);
  transform-origin: left;
}

/* Header ticker */
.headerticker {
  padding: 11px 70px;
  background: #1063F4;
  font-size: 20px;
  line-height: 25px;
  color: #fff;
  text-align: center;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
  z-index: 100;
  transition: transform 0.4s ease;
}

.headerticker.is-hidden {
  transform: translateY(-100%);
}

.headerticker ul {
  margin: 0;
  padding: 0;
}

.headerticker ul li {
  padding: 0 20px;
  margin: 0;
  display: block;
}

.headerticker .tickclose {
  position: absolute;
  display: inline-block;
  right: 62px;
  top: 16px;
  opacity: 0.85;
  transition: opacity 0.2s;
  cursor: pointer;
  background: none;
  border: none;
  padding: 0;
  line-height: 1;
}

.headerticker .tickclose:hover {
  opacity: 1;
}
/* ... */

